# g2d-discord-forge

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  compose.yaml  forge.py  pyproject.toml
.github/workflows/: publish-v1.yml  scheduled-release-v1.yml  tests.yml
.release/: core.part00  core.part01  core.part02  core.part03  core.part04  core.part05  engine.part00  engine.part01  engine.part02  engine.part03  engine.part04  engine.part05  engine.part06  engine.part07  engine.part08  test_core.part00  test_core.part01  test_engine.part00  test_engine.part01  tests.yml
src/guild_forge/: __init__.py  api.py  cli.py  config.py  core.py  engine.py  state.py
tests/: test_core.py  test_engine.py
